[package]
name = "newpfd"
version = "0.6.0"
edition = "2021"
rust-version = "1.73"
license = " GPL-3.0-or-later"
description = "NewPFD integer compression/decompression"
homepage = "https://github.com/redst4r/newpfd-rs"
repository = "https://github.com/redst4r/newpfd-rs"
keywords = ["integer-compression", "NewPFD", "PForDelta", "encoding", "fibonacci"]
categories = ["Compression", "Algorithms"]
readme = "README.md"
include = ["/src", "README.md"]


[dependencies]
bitvec="1"
itertools="0.12"
bit-vec="0.6"  # TODO: remove this old depenency
fastfibonacci="0.1.0"

[dev-dependencies]
rand = "0.8"
criterion = "0.5"
pretty_assertions = "1"
rand_distr = "0.4.3"

[[bench]]
name = "my_benchmark"
harness = false
path = "benches/my_benchmark.rs"  # only here to make the crate publishable; otherwise cargo complains about missing bench file
